--- a/Mapplas/Mapplas/AppsViewController.xib
+++ b/Mapplas/Mapplas/AppsViewController.xib
@@ -13,6 +13,7 @@
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
 			<string>IBUIActivityIndicatorView</string>
+			<string>IBUILabel</string>
 			<string>IBUITableView</string>
 			<string>IBUIView</string>
 		</array>
@@ -42,7 +43,6 @@
 						<string key="NSFrameSize">{320, 416}</string>
 						<reference key="NSSuperview" ref="979818913"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -67,7 +67,7 @@
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
-					<object class="NSColorSpace" key="NSCustomColorSpace" id="961968150">
+					<object class="NSColorSpace" key="NSCustomColorSpace" id="339277612">
 						<int key="NSID">2</int>
 					</object>
 				</object>
@@ -77,17 +77,52 @@
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUIView" id="140189423">
+			<object class="IBUIView" id="541861626">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIActivityIndicatorView" id="346467295">
-						<reference key="NSNextResponder" ref="140189423"/>
+					<object class="IBUILabel" id="396565094">
+						<reference key="NSNextResponder" ref="541861626"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{150, 26}, {20, 20}}</string>
-						<reference key="NSSuperview" ref="140189423"/>
+						<string key="NSFrame">{{20, 26}, {280, 21}}</string>
+						<reference key="NSSuperview" ref="541861626"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MSAxIDEAA</bytes>
+						</object>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<int key="IBUIContentMode">7</int>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<string key="IBUIText">Cargando aplicaciones...</string>
+						<object class="NSColor" key="IBUITextColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC4xMjk0MTE3NjQ3IDAuMTI5NDExNzY0NyAwLjEyOTQxMTc2NDcAA</bytes>
+						</object>
+						<nil key="IBUIHighlightedColor"/>
+						<int key="IBUIBaselineAdjustment">0</int>
+						<int key="IBUITextAlignment">1</int>
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
+							<int key="type">1</int>
+							<double key="pointSize">14</double>
+						</object>
+						<object class="NSFont" key="IBUIFont">
+							<string key="NSName">Helvetica</string>
+							<double key="NSSize">14</double>
+							<int key="NSfFlags">16</int>
+						</object>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+					</object>
+					<object class="IBUIActivityIndicatorView" id="363045541">
+						<reference key="NSNextResponder" ref="541861626"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{44, 26}, {20, 20}}</string>
+						<reference key="NSSuperview" ref="541861626"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="396565094"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -95,19 +130,19 @@
 						<int key="IBUIStyle">2</int>
 						<object class="NSColor" key="IBUIColor">
 							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MSAwLjI2ODUyNzU1NjMgMC4yMDgyMjc5Mjk3AA</bytes>
+							<bytes key="NSRGB">MC4xMjk0MTE3NjQ3IDAuMTI5NDExNzY0NyAwLjEyOTQxMTc2NDcAA</bytes>
 						</object>
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 72}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="346467295"/>
+				<reference key="NSNextKeyView" ref="363045541"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
-					<reference key="NSCustomColorSpace" ref="961968150"/>
+					<reference key="NSCustomColorSpace" ref="339277612"/>
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
@@ -134,7 +169,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">cellLoading</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="140189423"/>
+						<reference key="destination" ref="541861626"/>
 					</object>
 					<int key="connectionID">25</int>
 				</object>
@@ -142,9 +177,17 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">loading</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="346467295"/>
+						<reference key="destination" ref="363045541"/>
 					</object>
 					<int key="connectionID">26</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">loadingText</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="396565094"/>
+					</object>
+					<int key="connectionID">28</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -182,17 +225,23 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">24</int>
-						<reference key="object" ref="140189423"/>
+						<reference key="object" ref="541861626"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="346467295"/>
+							<reference ref="363045541"/>
+							<reference ref="396565094"/>
 						</array>
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Loading cell</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">21</int>
-						<reference key="object" ref="346467295"/>
-						<reference key="parent" ref="140189423"/>
+						<reference key="object" ref="363045541"/>
+						<reference key="parent" ref="541861626"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">27</int>
+						<reference key="object" ref="396565094"/>
+						<reference key="parent" ref="541861626"/>
 					</object>
 				</array>
 			</object>
@@ -205,12 +254,13 @@
 				<string key="13.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="21.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="24.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="27.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">26</int>
+			<int key="maxID">28</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -220,6 +270,7 @@
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="cellLoading">UIView</string>
 						<string key="loading">UIActivityIndicatorView</string>
+						<string key="loadingText">UILabel</string>
 						<string key="table">UITableView</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
@@ -230,6 +281,10 @@
 						<object class="IBToOneOutletInfo" key="loading">
 							<string key="name">loading</string>
 							<string key="candidateClassName">UIActivityIndicatorView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="loadingText">
+							<string key="name">loadingText</string>
+							<string key="candidateClassName">UILabel</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="table">
 							<string key="name">table</string>
